docs/platforms/winpack_dldt/2020.1/index.md
# Index of `platforms/winpack_dldt/2020.1/`

## Overview

This folder is part of the OpenCV repository structure and contains source code, and other repository content.

**Location**: `platforms/winpack_dldt/2020.1`



## Files (7)

This folder contains the following files:

| File Name | Type | Size | Documentation | Keywords |
|-----------|------|------|---------------|----------|
| [20200313-dldt-disable-unused-targets.patch](../../../../platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch) | PATCH | 7.0KB | [docs](20200313-dldt-disable-unused-targets.patch_docs.md) | [keywords](20200313-dldt-disable-unused-targets.patch_kw.md) |
| [20200313-dldt-fix-binaries-location.patch](../../../../platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch) | PATCH | 424B | [docs](20200313-dldt-fix-binaries-location.patch_docs.md) | [keywords](20200313-dldt-fix-binaries-location.patch_kw.md) |
| [20200313-ngraph-disable-tests-examples.patch](../../../../platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch) | PATCH | 595B | [docs](20200313-ngraph-disable-tests-examples.patch_docs.md) | [keywords](20200313-ngraph-disable-tests-examples.patch_kw.md) |
| [20200318-dldt-pdb.patch](../../../../platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch) | PATCH | 491B | [docs](20200318-dldt-pdb.patch_docs.md) | [keywords](20200318-dldt-pdb.patch_kw.md) |
| [20200319-dldt-fix-msvs2019-v16.5.0.patch](../../../../platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch) | PATCH | 368B | [docs](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) | [keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md) |
| [patch.config.py](../../../../platforms/winpack_dldt/2020.1/patch.config.py) | PY | 275B | [docs](patch.config.py_docs.md) | [keywords](patch.config.py_kw.md) |
| [sysroot.config.py](../../../../platforms/winpack_dldt/2020.1/sysroot.config.py) | PY | 2.5KB | [docs](sysroot.config.py_docs.md) | [keywords](sysroot.config.py_kw.md) |


## Navigation Hints

### How to Explore This Folder


### Documentation Files

- **[doc.md](doc.md)**: Detailed narrative documentation for this folder
- **[sub.md](sub.md)**: Keyword index for this folder and all subfolders
- **index.md** (this file): Quick reference and file listing

