docs/platforms/winpack_dldt/2021.4.2/index.md
# Index of `platforms/winpack_dldt/2021.4.2/`

## Overview

This folder is part of the OpenCV repository structure and contains source code, and other repository content.

**Location**: `platforms/winpack_dldt/2021.4.2`


## Subfolders (1)

This folder contains the following subdirectories:

- **[cmake/](cmake/index.md)**: Subfolder containing 2 files


## Files (8)

This folder contains the following files:

| File Name | Type | Size | Documentation | Keywords |
|-----------|------|------|---------------|----------|
| [20210630-dldt-disable-multidevice-autoplugin.patch](../../../../platforms/winpack_dldt/2021.4.2/20210630-dldt-disable-multidevice-autoplugin.patch) | PATCH | 451B | [docs](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) | [keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md) |
| [20210630-dldt-disable-unused-targets.patch](../../../../platforms/winpack_dldt/2021.4.2/20210630-dldt-disable-unused-targets.patch) | PATCH | 8.9KB | [docs](20210630-dldt-disable-unused-targets.patch_docs.md) | [keywords](20210630-dldt-disable-unused-targets.patch_kw.md) |
| [20210630-dldt-pdb.patch](../../../../platforms/winpack_dldt/2021.4.2/20210630-dldt-pdb.patch) | PATCH | 620B | [docs](20210630-dldt-pdb.patch_docs.md) | [keywords](20210630-dldt-pdb.patch_kw.md) |
| [20210630-dldt-vs-version.patch](../../../../platforms/winpack_dldt/2021.4.2/20210630-dldt-vs-version.patch) | PATCH | 925B | [docs](20210630-dldt-vs-version.patch_docs.md) | [keywords](20210630-dldt-vs-version.patch_kw.md) |
| [20220118-dldt-fix-msvs-compilation-21469.patch](../../../../platforms/winpack_dldt/2021.4.2/20220118-dldt-fix-msvs-compilation-21469.patch) | PATCH | 410B | [docs](20220118-dldt-fix-msvs-compilation-21469.patch_docs.md) | [keywords](20220118-dldt-fix-msvs-compilation-21469.patch_kw.md) |
| [build.config.py](../../../../platforms/winpack_dldt/2021.4.2/build.config.py) | PY | 63B | [docs](build.config.py_docs.md) | [keywords](build.config.py_kw.md) |
| [patch.config.py](../../../../platforms/winpack_dldt/2021.4.2/patch.config.py) | PY | 266B | [docs](patch.config.py_docs.md) | [keywords](patch.config.py_kw.md) |
| [sysroot.config.py](../../../../platforms/winpack_dldt/2021.4.2/sysroot.config.py) | PY | 2.8KB | [docs](sysroot.config.py_docs.md) | [keywords](sysroot.config.py_kw.md) |


## Navigation Hints

### How to Explore This Folder

4. **Browse subdirectories** for more specific functionality


### Documentation Files

- **[doc.md](doc.md)**: Detailed narrative documentation for this folder
- **[sub.md](sub.md)**: Keyword index for this folder and all subfolders
- **index.md** (this file): Quick reference and file listing

